# python-barcode-qrcode-sdk

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  appveyor.yml  build.cmd  camera_async_api.py  pyproject.toml  setup.py  setup_distutils.py  setup_setuptools.py  test.py
.github/workflows/: main.yml
barcodeQrSDK/: __init__.py  scripts.py
examples/: config.py  license.py
examples/DeepLabv3/: .gitignore  README.md  config.py  convert_pth_to_tfjs.py  export_onnx.py  image_viewer.py  inference.py  main.py  main_window.py  metrics_widget.py  model_loader.py  post_processing.py  quantize_onnx.py  requirements.txt  utils.py
examples/DeepLabv3/web_app/: index.html  script.js
examples/DeepLabv3/web_app_onnx/: README.md  index.html  script.js  worker.js
examples/DeepLabv3/web_app_tfjs/: index.html  script.js  style.css
examples/DeepLabv3/web_app_tfjs/tfjs_model/: model.json
examples/camera/: README.md  camera-decodevideo.py  camera.py  camera_async_api.py  camera_multiprocessing.py  camera_thread.py  camera_video_api.py
examples/command-line/: pilimage.py  read_pil_img.py  test.py
examples/ctypes/: .gitignore  README.md  failure.py  success.py
examples/ctypes/bridge/: CMakeLists.txt  bridge.cpp  bridge.h
examples/document-detection/: README.md  data.py  dataset_viewer.py  document_detector_gui.py  prep_midv500_to_yolov11seg.py  requirements.txt  test_doc_detect_onnx.py  train_yolo_doc_detection.py
examples/official/10.x/: README.md  camera.py  file.py  utils.py
examples/official/9.x/arm32_arm64/: DockerfileArm32  DockerfileArm64  README.md  capture.py  cv_test.py  faster.json  file_test.py  pillow_test.py  requirements.txt
examples/official/9.x/django/: README.md  manage.py
examples/official/9.x/flet_chat_gemini/: README.md  chatbot.py  requirements.txt
examples/official/9.x/jupyter_notebook/: README.md  barcode_scanning.ipynb
examples/official/9.x/nonstandard_1D_barcode/: LICENSE  README.md  template_minus.json  template_plus.json  test.py
examples/official/9.x/qrcode_template/: README.md  inverted-color.json  inverted-color.py  license.txt  normal.py  perspective-distortion.py  (+1 more)
examples/official/ai_agent/: README.md
examples/official/annotation_tool/: README.md  compare_dbr_template_profiles.py  dbr_license.py  main.py  probe_dbr_templates.py  requirements.txt  tiny-barcodes-4-focused-template.json  validate_dbr_template.py  viewer.py
examples/official/arm32_arm64/: DockerfileArm32  DockerfileArm64  capture.py  cv_test.py  file_test.py  pillow_test.py  requirements.txt
examples/official/camera_file/: GridDeepDecode.json  GridFastScan.json  README.md  camera.py  file.py  gui.py  requirements.txt  utils.py
examples/official/comparison_tool/: README.md  requirements.txt  sdk_comparison.py
examples/official/dcv/: README.md  main.py  requirements.txt  utils.py
examples/official/django/: .gitignore  README.md  db.sqlite3  requirements.txt
examples/official/fastapi/: README.md  backend.py  requirements.txt
examples/official/flet_chat_gemini/: README.md  chatbot.py  chatbot.spec  requirements.txt
examples/official/gs1ai/: GS1AI_Scanner.json  README.md  main.py  requirements.txt
examples/official/ip_camera/: .gitignore  README.md  camera_config.json  ip_camera_server.py  requirements.txt
examples/official/jupyter_notebook/: README.md  barcode_scanning.ipynb
examples/official/low-resolution-glare-barcode-reader/: README.md  benchmark_dbr_templates.py  generate_test_images.py  requirements.txt
examples/official/nonstandard_1D_barcode/: README.md  template_minus.json  template_plus.json  test.py
examples/official/page_qr_ocr/: README.md  app.py  page_qr_ocr_template.json  requirements.txt
examples/official/pdf/: README.md  command_line.py  gui_barcode_reader_enhanced.py  gui_barcode_reader_pyside6.py  requirements.txt  requirements_pyside6.txt
examples/official/qt_gui/: README.md  app.py  app_advanced.py  barcode_manager.py  template.json
examples/official/retail-checkout/: README.md  generate_retail_images.py  read_retail_barcodes.py  requirements.txt  retail_scanner_gui.py
examples/official/semi_font_ocr/: README.md  read_semi_ocr.py  semi-ocr.json
examples/official/template_config/: README.md  barcode_parameters.json  parameter_adjustment_tool.py  requirements.txt
examples/official/tesseract/: README.md  app.py
examples/official/yolo_qr/: README.md  dbr-only-camera.py  dbr-only.py  opencv-yolo.py  yolo-dbr-camera.py  yolo-dbr.py
examples/official/zxing_zbar/: .gitignore  README.md  advanced.py  app.py  benchmark.xlsx  data.py  requirements.txt  run_benchmark.py  simple.py
examples/qt/: README.md  barcode-reader.py
examples/socket/: README.md  client.py  server.py  simplesocket.py
examples/ui/: app.py
examples/video/: rtsp.py
images/: test.tif
include/: DynamsoftBarcodeReader.h  DynamsoftCommon.h
lib/: DBRx64.lib
lib/macos/: libDynamsoftLicenseClient.dylib
lib/macos_arm64/: libDynamsoftLicenseClient.dylib
lib/win/: DBRx64.lib
src/: DynamsoftBarcodeReader.h  barcodeQrSDK.cpp  barcode_format.h  barcode_result.h  dbr.c  dynamsoft_barcode_reader.h  setup.py
wheel/: LICENSE.txt  README.md  setup.py
wheel/dbr/: __init__.py
(+516 files in other folders)
