[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = ""
manylinux-aarch64-image = ""
manylinux-ppc64le-image = ""
manylinux-s390x-image = ""
manylinux-pypy_x86_64-image = ""
manylinux-pypy_i686-image = ""
manylinux-pypy_aarch64-image = ""

musllinux-x86_64-image = ""
musllinux-i686-image = ""
musllinux-aarch64-image = ""
musllinux-ppc64le-image = ""
musllinux-s390x-image = ""

skip = ["*-win32", "*-manylinux_i686"]

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel} --plat manylinux2014_x86_64"
archs = ["x86_64"]

[tool.cibuildwheel.macos]
repair-wheel-command = [
  "delocate-listdeps {wheel}",
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} {wheel}",
]
